Implementación de seguridad

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=avance-tp
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/Voluntify
 spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.password=angela0407
 
 # Configuracion de Hibernate
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
@@ -14,3 +14,8 @@ springdoc.swagger-ui.enabled=true
 
 #definir la ruta de swagger-ui
 springdoc.swagger-ui.path=/doc/swagger-ui/index.html
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+server.port=8080
+jwt.secret=4t7w!z%C*F-JaNdRgUkXn2r5u8x/A?D(G+KbPeShVmYq3s6v9y$B&E)H@McQfTjW
+spring.devtools.restart.log-condition-evaluation-delta=false
