Modificación US13 y WebConfig

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.application.name=avance-tp
 
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/Voluntify
 spring.datasource.username=postgres
-spring.datasource.password=angela0407
+spring.datasource.password=eduardo1521
 
 # Configuracion de Hibernate
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
