--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,8 @@
 spring.application.name=avance-tp
 
-
 spring.datasource.url=jdbc:postgresql://localhost:5432/Voluntify
 spring.datasource.username=postgres
-spring.datasource.password=eduardo1521
+spring.datasource.password=angela0407
 
 # Configuracion de Hibernate
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
