Modificacion de US13

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=avance-tp
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/Voluntify
 spring.datasource.username=postgres
-spring.datasource.password=angela0407
+spring.datasource.password=admin
 
 # Configuracion de Hibernate
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
